# SPDX-License-Identifier: BSD-3-Clause

if(CONFIG_BAYTRAIL OR CONFIG_CHERRYTRAIL)
	add_subdirectory(baytrail)
elseif(CONFIG_HASWELL OR CONFIG_BROADWELL)
	add_subdirectory(haswell)
elseif(CONFIG_APOLLOLAKE)
	add_subdirectory(apollolake)
elseif(CONFIG_CANNONLAKE)
	add_subdirectory(cannonlake)
elseif(CONFIG_SUECREEK)
	add_subdirectory(suecreek)
elseif(CONFIG_ICELAKE)
	add_subdirectory(icelake)
elseif(CONFIG_TIGERLAKE)
	add_subdirectory(tigerlake)
elseif(CONFIG_IMX8)
	add_subdirectory(imx8)
endif()

if(CONFIG_CAVS)
	add_subdirectory(intel)
endif()
