# SPDX-License-Identifier: BSD-3-Clause

if(CONFIG_LIBRARY)
	add_subdirectory(library)
	return()
endif()

if(CONFIG_BAYTRAIL OR CONFIG_CHERRYTRAIL)
	add_subdirectory(baytrail)
elseif(CONFIG_HASWELL OR CONFIG_BROADWELL)
	add_subdirectory(haswell)
elseif(CONFIG_APOLLOLAKE)
	add_subdirectory(apollolake)
elseif(CONFIG_CANNONLAKE)
	add_subdirectory(cannonlake)
elseif(CONFIG_SUECREEK)
	add_subdirectory(suecreek)
elseif(CONFIG_ICELAKE)
	add_subdirectory(icelake)
elseif(CONFIG_TIGERLAKE)
	add_subdirectory(tigerlake)
elseif(CONFIG_IMX8 OR CONFIG_IMX8X)
	add_subdirectory(imx8)
elseif(CONFIG_IMX8M)
	add_subdirectory(imx8m)
elseif(CONFIG_IMX8ULP)
	add_subdirectory(imx8ulp)
elseif(CONFIG_RENOIR OR CONFIG_REMBRANDT)
	add_subdirectory(amd)
elseif(CONFIG_MT8186)
	add_subdirectory(mt8186)
elseif(CONFIG_MT8195)
        add_subdirectory(mt8195)
endif()

if(CONFIG_CAVS)
	add_subdirectory(intel)
endif()
