SUBDIRS = intel

if BUILD_BAYTRAIL
SUBDIRS += baytrail
endif

if BUILD_CHERRYTRAIL
SUBDIRS += baytrail
endif

if BUILD_APOLLOLAKE
SUBDIRS += apollolake
endif

if BUILD_HASWELL
SUBDIRS += haswell
endif

if BUILD_BROADWELL
SUBDIRS += haswell
endif

if BUILD_CANNONLAKE
SUBDIRS += cannonlake
endif

if BUILD_SUECREEK
SUBDIRS += suecreek
endif

if BUILD_ICELAKE
SUBDIRS += icelake
endif
